# homedmanager

./: LICENSE  README.md  homedmanager.cabal
app/: Main.hs
src/: Api.hs  Auth.hs  Cmd.hs  Config.hs  Fs.hs  Print.hs
src/Api/: PostRequest.hs  Request.hs  Response.hs  Types.hs
test/: Spec.hs
