name:                homedmanager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lupuionut/homedmanager
license:             BSD3
license-file:        LICENSE
author:              Ionuț Lupu
maintainer:          lupu.ionut@protonmail.ch
copyright:           2017 Ionuț Lupu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config,Cmd,Fs,Auth,Api
  other-modules:       Api.Types, Print
  build-depends:       base >= 4.7 && < 5, directory, unix, yaml, aeson,
                        http-conduit, bytestring, base64-string, http-types,
                        filepath, utf8-string, text
  default-language:    Haskell2010

executable homedmanager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, homedmanager, directory, unix, aeson
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, homedmanager, HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lupuionut/homedmanager
